fixed alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -35,7 +35,7 @@ button {
     border: 5px solid black;
     background: green;
     width: 510px;
-    margin: 0 auto;
+    margin-left: 50px;
 }
 
 #timer {
